force-app/main/default/objects/Dual_Draft__c/Dual_Draft__c.object-meta.xml
<CustomObject>
    <label>Dual Draft</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Dual Draft Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dual Drafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>