force-app/main/default/objects/Dual_Draft__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>