force-app/main/default/objects/Dual_Draft__c/fields/Mortgage_Company__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Company__c</fullName>
    <description>To track mortgage companies on dual drafts</description>
    <inlineHelpText>To track mortgage companies on dual drafts</inlineHelpText>
    <label>Mortgage Company</label>
    <length>50</length>
    <type>Text</type>
</CustomField>