force-app/main/default/objects/Dual_Draft__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <inlineHelpText>Date field that is used to identify when a dual draft check shouldn’t be included on the Dual Draft Report.</inlineHelpText>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>