force-app/main/default/objects/Dual_Draft__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Return_Date__c</columns>
    <columns>Sent_Date__c</columns>
    <columns>Check_Amount__c</columns>
    <columns>Check_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Check_Number__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>